# gt

./: .gitignore  LICENSE  README.md
design_doc/: BigPicture.txt
examples/cross-compile/: README.rst
examples/systemd/: 99-udc.rules  README.rst  gt.target  gt@.service
packaging/: gt.spec
source/: CMakeLists.txt  gt.conf  main.c  test.bash
source/base/: CMakeLists.txt
source/base/include/: backend.h  command.h  common.h  executable_command.h  parser.h
source/base/src/: backend.c  command.c  executable_command.c  parser.c
source/completions/: gt
source/config/: CMakeLists.txt
source/config/include/: configuration.h
source/config/src/: configuration.c  configuration_gadgetd.c  configuration_libusbg.c  configuration_not_implemented.c
source/ffs/: CMakeLists.txt
source/ffs/include/: ffs.h  ffs_state.h
source/ffs/src/: ffs.c  ffs_gadgetd.c  ffs_libusbg.c  ffs_not_implemented.c  ffs_state.c
source/function/: CMakeLists.txt
source/function/include/: function.h
source/function/src/: function.c  function_gadgetd.c  function_libusbg.c  function_not_implemented.c
source/gadget/: CMakeLists.txt
source/gadget/include/: gadget.h
source/gadget/src/: gadget.c  gadget_gadgetd.c  gadget_libusbg.c  gadget_not_implemented.c
source/manpages/: CMakeLists.txt  gt.1.txt
source/settings/: CMakeLists.txt
source/settings/include/: settings.h
source/settings/src/: settings.c
source/udc/: CMakeLists.txt
source/udc/include/: udc.h
source/udc/src/: udc.c  udc_gadgetd.c  udc_libusbg.c  udc_not_implemented.c
