cmake_minimum_required(VERSION 2.8)

#project name
PROJECT(gt)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/base/include)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(BINDIR "${PREFIX}/bin")

ADD_DEFINITIONS("-DPREFIX=\"${PREFIX}\"")

SET(PKG_MODULES
        libusbg
	glib-2.0
	gio-2.0
)

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED ${PKG_MODULES})

FOREACH(flag ${pkgs_CFLAGS})
        SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -g -Wall")

ADD_SUBDIRECTORY(config)
ADD_SUBDIRECTORY(function)
ADD_SUBDIRECTORY(gadget)
ADD_SUBDIRECTORY(settings)
ADD_SUBDIRECTORY(udc)
ADD_SUBDIRECTORY(base)

SET(MAIN_SRC main.c)

ADD_EXECUTABLE(${PROJECT_NAME} ${MAIN_SRC})

TARGET_LINK_LIBRARIES( gt
	base
	udc
	config
	function
	gadget
	settings
	${pkgs_LDFLAGS}
)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${BINDIR})

