cmake_minimum_required(VERSION 2.8)

#project name
PROJECT(gt)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/base/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/settings/include)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(RUNTIME_PREFIX ${CMAKE_RUNTIME_PREFIX})
SET(BINDIR "${PREFIX}/bin")
SET(CONFDIR "${PREFIX}/etc/gt/")
SET(RUNTIME_CONFDIR "${RUNTIME_PREFIX}/etc/gt/")
SET(CONFFILE "gt.conf")

SET(COMPLETION_DIR "${PREFIX}/etc/bash_completion.d/")
SET(COMPLETION_FILES "completions/gt")

ADD_DEFINITIONS("-DGT_SETTING_PATH=\"${RUNTIME_CONFDIR}/${CONFFILE}\"")
ADD_DEFINITIONS("-DPREFIX=\"${PREFIX}\"")

SET(PKG_MODULES
        libusbgx>=0.2.0
	libconfig
)

IF (DEFINED CMAKE_WITH_GADGETD)
	ADD_DEFINITIONS("-DWITH_GADGETD=1")
	LIST(APPEND PKG_MODULES
		glib-2.0
		gio-2.0
	)
ENDIF ()

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED ${PKG_MODULES})

FOREACH(flag ${pkgs_CFLAGS})
        SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -g -Wall")

ADD_SUBDIRECTORY(config)
ADD_SUBDIRECTORY(function)
ADD_SUBDIRECTORY(gadget)
ADD_SUBDIRECTORY(settings)
ADD_SUBDIRECTORY(udc)
ADD_SUBDIRECTORY(ffs)
ADD_SUBDIRECTORY(base)
ADD_SUBDIRECTORY(manpages)

SET(MAIN_SRC main.c)

ADD_EXECUTABLE(${PROJECT_NAME} ${MAIN_SRC})

TARGET_LINK_LIBRARIES( gt
	base
	udc
	ffs
	config
	function
	gadget
	settings
	${pkgs_LDFLAGS}
)

IF (NOT EXISTS "${CONFDIR}")
	INSTALL(DIRECTORY DESTINATION ${CONFDIR})
ENDIF()

IF (NOT EXISTS "${CONFDIR}/${CONFFILE}")
	INSTALL(FILES ${CONFFILE} DESTINATION ${CONFDIR})
ENDIF()

IF (EXISTS "${COMPLETION_DIR}")
	INSTALL(FILES ${COMPLETION_FILES} DESTINATION ${COMPLETION_DIR})
ENDIF()

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${BINDIR})

add_custom_command(
	TARGET ${PROJECT_NAME} POST_BUILD
	COMMAND ln -sf gt gt-parse-test)
